trying to fix zoom problem on mobile

--- a/src/components/HeaderMobile/HeaderMobile.styles.css
+++ b/src/components/HeaderMobile/HeaderMobile.styles.css
@@ -63,7 +63,6 @@
     margin: 0;
     padding: 0;
     width: 100vw;
-    max-width: 600px;
   }
   .header-mobile-ul {
     margin: 0;
