--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -51,5 +51,9 @@
     align-content: center;
     align-items: center;
     justify-content: center;
+    min-height: calc(
+      var(--content-full-page) - var(--button-actionable-mobile-margin) * 3 -
+        var(--title-mobile-height) - var(--button-actionable-mobile-height) * 2
+    );
   }
 }
